samples/_failures_safe/1761174820_203b98_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_68ad8561.c: In function ‘main’:
./samples/SAFE/__tmp_68ad8561.c:141:5: error: expected expression at end of input
  141 |     printf("Enter text to compress (max %d chars): ", MAX_INPUT_SIZE -
      |     ^~~~~~
./samples/SAFE/__tmp_68ad8561.c:141:5: error: expected declaration or statement at end of input
